--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "pub": "npm run compile && npm run build && npm publish"
   },
   "peerDependencies": {
-    "g2": "^1.2.6"
+    "g2": "^2.0.0"
   },
   "devDependencies": {
     "atool-build": "~0.7.5",
@@ -57,12 +57,13 @@
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "expect.js": "^0.3.1",
-    "g2": "^1.2.6",
+    "g2": "^2.0.0",
     "gh-pages": "^0.11.0",
     "pre-commit": "1.x",
     "react": "0.14.x",
     "react-dom": "0.14.x",
-    "webpack": "~1.12.14"
+    "webpack": "~1.12.14",
+    "g2-plugin-slider": "1.0.0-beta"
   },
   "pre-commit": [
     "lint"
