--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "g2-react",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "description": "factory wrapper for g2",
   "keywords": [
     "react",
@@ -45,6 +45,7 @@
     "atool-build": "~0.7.5",
     "atool-doc": "~0.7.0",
     "atool-test": "^0.4.16",
+    "babel-cli": "^6.23.0",
     "babel-eslint": "^6.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
@@ -58,12 +59,12 @@
     "eslint-plugin-react": "^5.2.2",
     "expect.js": "^0.3.1",
     "g2": "^2.0.0",
+    "g2-plugin-slider": "~1.0.0",
     "gh-pages": "^0.11.0",
     "pre-commit": "1.x",
     "react": "0.14.x",
     "react-dom": "0.14.x",
-    "webpack": "~1.12.14",
-    "g2-plugin-slider": "~1.0.0"
+    "webpack": "~1.12.14"
   },
   "pre-commit": [
     "lint"
