--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     "g2-plugin-slider": "~1.2.0",
     "gh-pages": "^0.11.0",
     "pre-commit": "1.x",
-    "react": "0.14.x",
-    "react-dom": "0.14.x",
+    "react": "latest",
+    "react-dom": "latest",
     "webpack": "~1.12.14"
   },
   "pre-commit": [
@@ -78,5 +78,8 @@
     "plugins": [
       "add-module-exports"
     ]
+  },
+  "dependencies": {
+    "prop-types": "^15.5.7"
   }
 }
